test/functional/Sema/improved_error_messages.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

struct Point {
    x: Int,
    y: Int
}

func main() -> Int {
    // This will create type constraint conflicts that can't be resolved
    // TODO: Update the check lines below to match the type of variable 'p'
    // when solve is fixed
    // CHECK: error: Cannot use integer literal as ?
    let p: Point = 42;
    return 0;
}
